--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "clean": "pnpm clean:build && pnpm clean:coverage"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-is": ">= 16.8.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "styled-components": "^5.3.9"
   },
