--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "typeRoots": ["node_modules/@types"],
-    "types": ["vite-plugin-svgr/client"],
+    "types": [
+      "vite-plugin-svgr/client", "vitest/globals"
+    ],
     "paths": {
       "~/*": ["./src/*"]
     }
